# flanks-python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2025-12-21-flanks-python-sdk-design.md  2025-12-21-flanks-sdk-implementation.md  2025-12-23-api-fix-plan.md
flanks/: __init__.py  base.py  client.py  connection.py
flanks/aggregation_v1/: client.py
flanks/aggregation_v2/: __init__.py  client.py
flanks/connect/: client.py
flanks/credentials/: __init__.py  client.py  models.py
flanks/entities/: client.py
flanks/links/: __init__.py  client.py  models.py
flanks/report/: client.py  models.py
tests/: conftest.py  test_base.py  test_client.py  test_connection.py  test_exceptions.py  test_pagination.py
tests/aggregation_v1/: test_client.py
tests/aggregation_v2/: test_client.py
tests/connect/: test_client.py
tests/credentials/: test_client.py
tests/entities/: test_client.py
tests/links/: test_client.py
tests/report/: test_client.py
